<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single"
        android:id="@+id/group1">
        <item android:id="@+id/resetpassworditem"
            android:icon="@drawable/ic_resetpassword"
            android:title="@string/resetpasswordheader">
        </item>
        <item android:id="@+id/aboutus"
            android:icon="@drawable/ic_info"
            android:title="@string/aboutusheader">
        </item>
        <item android:id="@+id/delete"
            android:icon="@drawable/ic_delete"
            android:title="@string/deletebutton">
        </item>
        <item android:id="@+id/logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/logoutbutton">
        </item>
    </group>
</menu>