<?xml version="1.0" encoding="utf-8"?>
<!--Coded by John Alvin Joseph-->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:outlineAmbientShadowColor="@color/filledTextFieldColor"
    android:outlineSpotShadowColor="@color/filledTextFieldColor"
    android:textSize="40sp"
    android:textStyle="bold"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:alpha="0.02"
            android:backgroundTintMode="add"
            android:scaleType="centerCrop"
            android:src="@drawable/logintop" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="-115dp"
            android:backgroundTint="@color/colorPrimary_Dark"
            android:text="Remote Vehicle Diagnostic System"
            android:textAlignment="textStart"
            android:textColor="@color/font_Primary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="280dp"
            android:layout_marginTop="-80dp"
            android:src="@drawable/titlehead" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="480dp"
        android:adjustViewBounds="true"
        android:alpha="0.15"
        android:scaleType="centerCrop"
        android:src="@drawable/loginpage">

    </ImageView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="200dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:hint="@string/email"
        android:textColorHint="@color/font_Secondary"
        android:theme="@style/TextInputLayoutAppearance"
        app:boxBackgroundColor="@color/filledTextFieldColor"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/font_Primary"
        app:boxStrokeErrorColor="@color/colorError"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/font_Secondary"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/font_Secondary"
            android:textColorLink="@color/colorSecondary_Dark"
            android:textCursorDrawable="@color/colorSecondary_Dark"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_textInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="280dp"
        android:layout_marginRight="25dp"
        android:gravity="center"
        android:hint="@string/password"
        android:textColorHint="@color/font_Secondary"
        android:theme="@style/TextInputLayoutAppearance"
        app:boxBackgroundColor="@color/filledTextFieldColor"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/font_Primary"
        app:boxStrokeErrorColor="@color/colorError"
        app:endIconMode="clear_text"
        app:errorEnabled="true"
        app:hintTextColor="@color/font_Secondary"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_textfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/font_Secondary"
            android:textColorLink="@color/colorSecondary_Dark"
            android:textCursorDrawable="@color/colorSecondary_Dark"
            android:textSize="20sp"
            android:textStyle="bold" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_button"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="405dp"
        app:cardBackgroundColor="@color/colorSecondary_Dark"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginbutton"
                android:textAlignment="center"
                android:textColor="@color/font_Primary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/verify_button"
        android:layout_width="340dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="405dp"
        app:cardBackgroundColor="@color/colorSecondary_Dark"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verifybutton"
                android:textAlignment="center"
                android:textColor="@color/font_Primary"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/forgotpassword_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="80dp"
        android:layout_marginTop="365dp"
        android:text="@string/forgotpassbutton"
        android:textColor="@color/font_Tertiary"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/newuser_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="480dp"
        android:text="@string/registerbutton"
        android:textColor="@color/font_Tertiary"
        android:textSize="18sp"
        android:textStyle="bold" />

</FrameLayout>